--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -1,1 +1,8 @@
-<p>jobs works!</p>
+<div >
+    <div>
+        <job-manager-jobs-list></job-manager-jobs-list>
+    </div>
+    <div>
+        <router-outlet></router-outlet>
+    </div>
+</div>
